| Summary: | ASTERISK-28631: res_parking: Doesn't park when parkee and parker are the same | ||
| Reporter: | Ross Beer (rossbeer) | Labels: | |
| Date Opened: | 2019-11-25 06:36:48.000-0600 | Date Closed: | 2019-12-04 17:11:02.000-0600 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_parking |
| Versions: | 13.29.1 GIT | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Since the patch for issue ASTERISK-28616, it is no longer possible to Park calls using:
{noformat} exten => 1900,1,Set(PARKINGEXTEN=1901) exten => 1900,n,Park(${CHANNEL(accountcode)}) {noformat} As soon as the Park application is called the call disconnects. Rolling back the patch resolves the issue. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2019-11-25 06:36:49.617-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2019-12-04 17:11:02.847-0600 Change 13308 merged by Friendly Automation: parking: Fall back to parker channel name even if it matches parkee. [https://gerrit.asterisk.org/c/asterisk/+/13308|https://gerrit.asterisk.org/c/asterisk/+/13308] By: Friendly Automation (friendly-automation) 2019-12-04 17:14:21.952-0600 Change 13307 merged by Friendly Automation: parking: Fall back to parker channel name even if it matches parkee. [https://gerrit.asterisk.org/c/asterisk/+/13307|https://gerrit.asterisk.org/c/asterisk/+/13307] By: Friendly Automation (friendly-automation) 2019-12-04 17:22:37.793-0600 Change 13297 merged by Friendly Automation: parking: Fall back to parker channel name even if it matches parkee. [https://gerrit.asterisk.org/c/asterisk/+/13297|https://gerrit.asterisk.org/c/asterisk/+/13297] By: Friendly Automation (friendly-automation) 2019-12-04 17:38:00.105-0600 Change 13295 merged by Kevin Harwell: parking: Fall back to parker channel name even if it matches parkee. [https://gerrit.asterisk.org/c/asterisk/+/13295|https://gerrit.asterisk.org/c/asterisk/+/13295] By: Friendly Automation (friendly-automation) 2019-12-04 17:38:28.950-0600 Change 13296 merged by Kevin Harwell: parking: Fall back to parker channel name even if it matches parkee. [https://gerrit.asterisk.org/c/asterisk/+/13296|https://gerrit.asterisk.org/c/asterisk/+/13296] By: Friendly Automation (friendly-automation) 2019-12-04 17:38:58.836-0600 Change 13294 merged by Kevin Harwell: parking: Fall back to parker channel name even if it matches parkee. [https://gerrit.asterisk.org/c/asterisk/+/13294|https://gerrit.asterisk.org/c/asterisk/+/13294] | ||